# VoxChis

./: .gitignore  CMakeLists.txt  main.cpp
VulkanChis/: CMakeLists.txt  VKCBuffer.cpp  VKCBuffer.h  VKCCommandManager.cpp  VKCCommandManager.h  VKCDebugMessenger.cpp  VKCDebugMessenger.h  VKCGraphicsPipeline.cpp  VKCGraphicsPipeline.h  VKCInstance.cpp  VKCInstance.h  VKCLogicalDevice.cpp  VKCLogicalDevice.h  VKCManager.cpp  VKCManager.h  VKCRenderPass.cpp  VKCRenderPass.h  VKCShaderModule.cpp  VKCShaderModule.h  VKCSurface.cpp  VKCSurface.h  VKCSwapChain.cpp  VKCSwapChain.h  VKCSyncObjects.cpp  VKCSyncObjects.h  VKCValidator.cpp  VKCValidator.h  VKChisInstance.cpp  VKChisInstance.h  VKChisSurface.cpp  VKChisSurface.h  VKChisValidator.cpp  VKChisValidator.h  WINChisInstance.cpp  WINChisInstance.h
VulkanChis/Headers/: VKCEnumerations.h  VKCMath.h  VKCStructs.h
VulkanChis/Utils/: ColorMessages.h  VKCEnumerations.h  VKCExtensionManager.h  VKCStructs.h
VulkanChis/VKCDynamicComponents/: VKCBuffer.cpp  VKCBuffer.h  VKCDescriptorSetLayout.cpp  VKCDescriptorSetLayout.h  VKCGraphicsPipeline.cpp  VKCGraphicsPipeline.h  VKCManager.cpp  VKCManager.h  VKCRenderPass.cpp  VKCRenderPass.h  VKCShaderModule.cpp  VKCShaderModule.h  VKCSyncObjects.cpp  VKCSyncObjects.h  WINChisInstance.cpp  WINChisInstance.h
VulkanChis/VKCSubsystem/: VKCCommandManager.cpp  VKCCommandManager.h  VKCDebugMessenger.h  VKCDescriptorManager.cpp  VKCDescriptorManager.h  VKCDevice.cpp  VKCDevice.h  VKCInstance.cpp  VKCInstance.h  VKCLogicalDevice.cpp  VKCLogicalDevice.h  VKCSurface.cpp  VKCSwapChain.cpp  (+2 more)
(+38 files in other folders)
